# sfml-spaceships

./: .gitignore  CMakeLists.txt  README.md
include/: application.h  button.h  enemy.h  game.h  missile.h  obj_cleaner.h  object.h  player.h  sfml_headers.h  state.h  stats_tracker.h
src/: application.cpp  button.cpp  enemy.cpp  game.cpp  main.cpp  missile.cpp  obj_cleaner.cpp  object.cpp  player.cpp  state.cpp  stats_tracker.cpp
states/include/: end_state.h  game_state.h  menu_state.h  options_state.h  pause_state.h  state.h
states/src/: end_state.cpp  game_state.cpp  menu_state.cpp  options_state.cpp  pause_state.cpp  state.cpp
tests/: runAllTests.cpp  test_button.cpp  test_enemy.cpp  test_object.cpp  test_player.cpp
